[package]
name = "kis-rs-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest"]
websocket-client = ["dep:aes", "dep:base64", "dep:cbc", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite"]

[dependencies]
aes = { version = "0.8", optional = true }
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
cbc = { version = "0.1", default-features = false, features = ["alloc", "block-padding"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
rust_decimal = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["net"], optional = true }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
